# KaolCode

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: agent_task.yml
.github/workflows/: ci.yml
config/: litellm_config.yaml  policy.yaml  repos.yaml
docs/: github_app_permissions.md  kpi_dashboard.md  operations_quickstart.md  pi_migration.md  pilot_projects.md  risk_register.md  roadmap.md
docs/agent-runs/: 1f651856-2341-481a-bad6-e731b15ca2d0.md  285664c6-3fb1-47c7-9538-0a5888f4160f.md  2adce21d-a127-46ef-87e3-66a075b17496.md  36ce0612-95dc-4368-87a5-a5f48984b06f.md  52bceb38-09df-4550-a16b-3054fc671e29.md  57f2be00-3f2f-40e0-827b-2342c0b5f768.md  5981844d-284d-4943-b2ac-bab396ff8c0a.md  5ab0056e-fa47-40f2-8c95-4d8e6c202f13.md  5c14c899-ee37-423c-82a7-5c032d528c72.md  7a406680-aa76-43f1-806f-df9b6e4410cc.md  9a92d4f1-8cdd-4a62-8037-72ac5031ad21.md  9ae4b533-df3a-4800-a109-2215ab6d5c12.md  af1b161a-ff4f-4d10-bf19-5bcc15af9741.md  b59158ec-0f29-4afc-8b28-509d711d2966.md  d9f68266-be37-40b9-af6f-03b895010e90.md  e50455fc-f061-4833-8e21-12f784913d25.md  f5bea713-2ce2-4526-a9a1-255634ecb47b.md
docs/reports/: m2_fast_lane_burnin_2026-02-18.md
docs/runbooks/: incidents.md  triage_replay.md
infra/alertmanager/: alertmanager.yml
infra/loki/: loki-config.yml
infra/prometheus/: alerts.yml  prometheus.yml
scripts/: backup_postgres.sh  bootstrap_linux.sh  restore_postgres.sh
sql/: init.sql
tests/: test_api.py  test_failure_taxonomy.py  test_policy.py  test_queueing.py
(+24 files in other folders)
